--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learning-app3",
+  "name": "FluentUp_Chiangkhan School",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
