--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "learning-app3",
-    "slug": "learning-app3",
+    "name": "FluentUp_Chiangkhan School",
+    "slug": "FluentUp_Chiangkhan School",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
